# Object-Detection-CUDA

./: README.md  USER_GUIDE.md  configs  data  requirements.txt  run_detector.bat  run_fp32.bat  run_safe.bat  setup.py
notebooks/: model_exploration.ipynb
src/: main.py  main.py                # Entry point for the application
src/camera/: webcam.py
src/camera/__init__.py/webcam.py          # Webcam capture and processing/: detector.py        # Object detection models  tracker.py         # Object tracking algorithms
src/models/: detector.py  tracker.py
src/utils/: CMakeLists.txt  cuda_utils.py  visualization.py
src/utils/include/: cuda_ops.h
src/utils/src/: cuda_ops.cpp
src/utils/src/default.yaml           # Configuration parameters/: test_videos            # Sample videos for testing
src/utils/visualization.py   # Visualization tools/: performance.py     # Performance monitoring
src/utils/visualization.py   # Visualization tools/cpp_extensions         # C++ CUDA optimizations/setup.py           # For building C++ extensions/: models                 # Pre-trained models
tests/: test_detector.py  test_tracker.py  test_webcam.py
